; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/boards/extr_emu2413.c_lin2db.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/FCEU/FCEU/boards/extr_emu2413.c_lin2db.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DB_MUTE = common dso_local global i64 0, align 8
@DB_STEP = common dso_local global double 0.000000e+00, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (double)* @lin2db to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lin2db(double %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca double, align 8
  store double %0, double* %3, align 8
  %4 = load double, double* %3, align 8
  %5 = fcmp oeq double %4, 0.000000e+00
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i64, i64* @DB_MUTE, align 8
  %8 = sub nsw i64 %7, 1
  store i64 %8, i64* %2, align 8
  br label %20

9:                                                ; preds = %1
  %10 = load double, double* %3, align 8
  %11 = call double @log10(double %10) #3
  %12 = fmul double 2.000000e+01, %11
  %13 = load double, double* @DB_STEP, align 8
  %14 = fdiv double %12, %13
  %15 = fptosi double %14 to i64
  %16 = sub nsw i64 0, %15
  %17 = load i64, i64* @DB_MUTE, align 8
  %18 = sub nsw i64 %17, 1
  %19 = call i64 @Min(i64 %16, i64 %18)
  store i64 %19, i64* %2, align 8
  br label %20

20:                                               ; preds = %9, %6
  %21 = load i64, i64* %2, align 8
  ret i64 %21
}

declare dso_local i64 @Min(i64, i64) #1

; Function Attrs: nounwind
declare dso_local double @log10(double) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
